--- a/TwitterClone/index.html
+++ b/TwitterClone/index.html
@@ -7,12 +7,20 @@
     <link href="StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <div id="profile"></div>
-    <div id="tweet">
-        <textarea id="text"></textarea>
-        <div class="btn btn-info"><span class="fa fa-twitter fa-5x"></span></div> 
+    <div class="well" id="profile">
+        <div id="displayProfile"></div>
+        <div id="editProfile">
+            <input type="text" id="name" placeholder="Name" />
+            <input type="text" id="pic" placeholder="URL" />
+            <textarea id="bio" placeholder="Bio"></textarea>
+            <input class="btn btn-info" type="button" value="Save Profile" />
+        </div>
     </div>
-    <div id="displaytweets"></div>
+    <div class="well" id="tweet">
+        <textarea id="text"></textarea>
+        <div class="btn btn-info" onclick="myApp.createMessage();"><span class="fa fa-twitter fa-5x"></span></div>
+    </div>
+    <div class="well" id="displaytweets"></div>
 
     <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
