array writetable-MG

--- a/TwitterClone/index.html
+++ b/TwitterClone/index.html
@@ -20,7 +20,7 @@
         <textarea id="text"></textarea>
         <div class="btn btn-info" onclick="myApp.createMessage();"><span class="fa fa-twitter fa-5x"></span></div>
     </div>
-    <div class="well" id="displaytweets"></div>
+    <div class="well" id="displayTweets"></div>
 
     <script src="Scripts/jquery-1.9.1.js"></script>
     <script src="Scripts/bootstrap.js"></script>
